--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <h1>Rayshawn Gibson | WDD 130</h1>
       <img src="images/profile.jpg" alt="Hello, my name is Rayshawn Gibson" width="200">
-      <p>Hello! My name is Rayshawn Gibson and I am from Nassau, The Bahamas. I'm a 24 year old Student and Branch President who enjoys making YouTube Videos. </p>
+      <p>Hello! My name is Rayshawn Gibson and I am from Nassau, The Bahamas. I'm a 24 year old Student and Branch President who enjoys drawing and making YouTube Videos. </p>
     </main>
     <footer>
       <p>©️2024 | Rayshawn Gibson | The Bahamas</p>
