I added several Placeholder Graphics, and made an attempt to add one to the header of the site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rayshawn Gibson | WDD 130</title>
+    <img src="images/graphics/webpage.svg">
   </head>
   <body>
     <header>
