Another attempt at adding a "favicon"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rayshawn Gibson | WDD 130</title>
-    <img src="images/graphics/webpage.svg">
+    <link rel="icon" type="image/x-icon" href="images/graphics/webpage.svg">
   </head>
   <body>
     <header>
