Completed the Holygrail Assignment

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
+<!--This next line defines the language the site will be in.-->
 <html lang="en-US">
   <head>
+   <!--The head element outlines html metadata, like syles, scripts, characters, and the title
+   This is placed between the html tag and the body tag-->
     <meta charset="utf-8">
+    <!--This line dictates to the individual broser to render the webpage based on the dimensions of the device it's being viewed on.-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+   <!--The title is fundamental, and the site will NOT work if it isn't present.-->
     <title>Rayshawn Gibson | WDD 130</title>
-    <link rel="icon" type="image/x-icon" href="images/graphics/webpage.svg">
+    <!--The following line of code is dedicated to adding a "favicon", which is 
+    fancy talk for the icon that sits with the title of the page -->
+    <link rel="icon" type="image/x-icon" href="images/graphics/head.svg">
   </head>
+  <!--The body element houses the MEAT of your page. There can only be one in a given HTML document.-->
   <body>
     <header>
       <nav>
