Take 2, I edited the nav element to end before the body element begins

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -10,13 +10,14 @@
     </head>
     <body>
         <header>
-            <h1>The Holy Grail Practice Assignment</h1>
+            <h1>Holy Grail Layout Example</h1>
         </header>
         <nav>
             <ul>
                 <li><a href="https://byui.edu">BYU-Idaho</a></li>
                 <li><a href="https://churchofjesuschrist.org">The Church</a></li>
             </ul>
+        </nav>
             <main>
                 <section>
                     <h2>Heading</h2>
@@ -29,6 +30,5 @@
                 <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/400x225/accra-ghana-temple-detail-249022-2400x1200.jpg" width="200">
             </aside>
             <footer>Rayshawn Gibson</footer>
-        </nav>
     </body>
 </html>
