I wrote and linked a CSS document to style the index page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!--The following line of code is dedicated to adding a "favicon", which is 
     fancy talk for the icon that sits with the title of the page -->
     <link rel="icon" type="image/x-icon" href="images/graphics/head.svg">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <!--The body element houses the MEAT of your page. There can only be one in a given HTML document.-->
   <body>
