I edited the CSS file to have a few more specifications, and edited the HTML to fit the criteria for Week 2 assignment.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <!--The title is fundamental, and the site will NOT work if it isn't present.-->
     <title>Rayshawn Gibson | WDD 130</title>
+    <meta name="description" content="Rayshawn Gibson's Homepage for WDD130">
+    <meta name="author" content="Rayshawn Gibson">
     <!--The following line of code is dedicated to adding a "favicon", which is 
     fancy talk for the icon that sits with the title of the page -->
     <link rel="icon" type="image/x-icon" href="images/graphics/head.svg">
@@ -27,6 +29,11 @@
       <img src="images/profile.jpg" alt="Hello, my name is Rayshawn Gibson" width="200">
       <p>Hello! My name is Rayshawn Gibson and I am from Nassau, The Bahamas. I'm a 24 year old Student and Branch President who enjoys drawing and making YouTube Videos. </p>
     </main>
+    <aside>
+      <h2> The Commonwealth of The Bahamas</h2>
+      <img src="images/flamingo.jpg" alt="The pink flamingo is the national bird of The Bahamas!" width="200">
+      <p>The Bahamas is well known for it's tourism industry. Admittedly, not much else. The country is an archipelago that contains over 700 islands and cays. Some of our delicacies are ocean life combined with United States Southern African inspired cooking.</p>
+    </aside>
     <footer>
       <p>©️2024 | Rayshawn Gibson | The Bahamas</p>
     </footer>
